--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola Victor Este es mi sitio web</p>
+    <p>Hola que vacaneria de curso</p>
 </body>
 </html>
